# silverblue

./: .gitignore  CMakeLists.txt  LICENSE  README.md
root/boot/limine/: limine.conf
src/: prefixes.txt
src/base/: CMakeLists.txt  base.ld
src/base/boot/: helpers.h  ldr_start.c  limine.h
src/base/hal/: x86.c
src/base/kernel/: main.c
src/base/kernel/misc/: abort.c
src/include/: common.h
src/include/silverblue/: abort.h  assert.h  hal.h  kernel.h
utils/: build.sh  clean.sh  clean_vendor.sh  cleanall.sh  makeiso.sh  vendor.sh  vm_gdb_iso.sh  vm_iso.sh
